--- a/css/master.css
+++ b/css/master.css
@@ -4,6 +4,13 @@
 	margin: 0;
 }
 
+.page__container {
+	max-width: 1170px;
+	margin: 20vh auto;
+	display: flex;
+	justify-content: center;
+}
+
 .container__google {
 	margin-top: 100px;
 	margin-left: 120px;
@@ -17,6 +24,8 @@
 	border-radius: 0 0 250px 0;
 	box-sizing: content-box;
 }
+
+
 
 .container__google:before {
 	content: "";
